text wrap problem fixed with word-break css property

--- a/packages/wheelhouse-frontend/src/components/reusables/Logs.css
+++ b/packages/wheelhouse-frontend/src/components/reusables/Logs.css
@@ -120,5 +120,5 @@
 }
 
 .wrap {
-  max-width: 70%;
+  word-break: break-all;
 }
